@@ -305,6 +305,11 @@ INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (2722
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=28145 AND `ItemId`=38326;
 INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (28145, 2, 38326);
 
+-- Venture Co. Spare Parts (Quest: Have a Part, Give a Part (Id: 12523))
+-- Venture Co. Excavator
+DELETE FROM `creature_questitem` WHERE `CreatureEntry`=28123 AND `ItemId`=38349;
+INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (28123, 2, 38349);
+
 -- Basilisk Crystals (Quest: Gluttonous Lurkers (Id: 12527))
 -- Lurking Basilisk
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=28145 AND `ItemId`=38382;
